# cosmic_strings

./: .gitattributes  .gitignore  README.md  pyproject.toml  requirements.txt  strings.ipynb  strings.py
data/: act_mv.txt  gks.txt  planck2013_mv.txt  planck_TT.txt
fortran_backend/: README.md  build_backend.py  cosmic_cl_backend.py
fortran_backend/src/: cosmic_strings_cl.f90
notebooks/: G_mu.ipynb  G_muP_Grid.ipynb  G_muP_Grid_ACTDR6_Final.ipynb  chi.ipynb  data.ipynb  power_spectrum.ipynb  strings.ipynb
strings/: __init__.py  build_backend.py  cl.py  data.py  fortran_backend.py
strings/_data/: act_mv.txt  curl_cov_MV_hybrid.npy  planck2013_mv.txt  planck_TT.txt
strings/src/: cosmic_strings_cl.f90
