[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "cosmic-strings"
version = "0.1.0"
description = "Cosmic string angular power spectrum utilities and bundled ACT/Planck data"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "numpy>=1.24",
    "scipy>=1.10",
    "tqdm>=4.65",
]

[tool.setuptools]
packages = ["strings"]

[tool.setuptools.package-data]
strings = ["_data/*.txt"]