[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "cosmic-strings"
version = "0.1.0"
description = "Fortran-backed cosmic string angular power spectrum estimator"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "numpy>=1.24",
]

[tool.setuptools]
packages = ["strings"]

[tool.setuptools.package-data]
strings = ["src/*.f90"]